# cleanab

./: .drone.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml.sample  diba.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yaml  docker.yaml  linters.yaml  pre-commit.yaml
cleanab/: __init__.py  __main__.py  cleaner.py  cli.py  constants.py  fints.py  formatter.py  holdings.py  main.py  schemas.py  transactions.py  types.py  utils.py  validators.py  ynab.py
cleanab/apps/: base.py  firefly_iii_fidi.py  ynab5.py
cleanab/models/: __init__.py  account_config.py  cleaner.py  config.py  enums.py  transaction.py
