[tool.poetry]
name = "cleanab"
version = "0.1.0"
description = "Fetch and clean FinTS/HBCI transactions and push them to YNAB"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fints = "^3.1"
pyyaml = "^5.4"
logzero = "^1.7.0"
click = "^8.0"
ynab-api = {git = "https://github.com/dmlerner/ynab-api"}
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.scripts]
pycleanab = 'cleanab.main:main'

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
